PL-pgSQL/src/gramaticas/.antlr/pgsqlParser.java
// Generated from /home/jorge/Compi_2/PL-pgSQL/PL-pgSQL/src/gramaticas/pgsql.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class pgsqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PUNTOCOMA=1, ASIGNACION=2, COMA=3, DOT=4, MAS=5, MENOS=6, POR=7, DIVIDIDO=8, 
		ELEVADO=9, MAYOR=10, MENOR=11, MAYOR_IGUAL=12, MENOR_IGUAL=13, IGUAL=14, 
		DIFERENTE=15, RANGE_DOTS=16, COR_OPN=17, COR_CLS=18, LPAR=19, RPAR=20, 
		DOLLAR_DOLLAR=21, ARRAY=22, DECLARE=23, INTEGER=24, DECIMAL=25, CHAR=26, 
		BOOLEAN=27, DATE=28, VARCHAR=29, TRUE=30, FALSE=31, BEGIN=32, END=33, 
		IF=34, THEN=35, ELSE=36, END_IF=37, CASE=38, WHEN=39, END_CASE=40, FOR=41, 
		IN=42, LOOP=43, END_LOOP=44, EXIT=45, CONTINUE=46, RAISE=47, RAISE_NOTICE=48, 
		RAISE_WARNING=49, RAISE_EXCEPTION=50, COMMIT=51, ROLLBACK=52, CREATE_FUNCTION=53, 
		CREATE_PROCEDURE=54, RETURNS=55, AS=56, LANGUAGE=57, PLPGSQL=58, FOREACH=59, 
		RETURN=60, OR_KW=61, AND_KW=62, NOT_KW=63, INSERT=64, INTO=65, VALUES=66, 
		UPDATE=67, SET=68, WHERE=69, DELETE=70, FROM=71, SELECT=72, JOIN=73, LEFT=74, 
		ON=75, NOW_FUNC=76, RANDOM_FUNC=77, CONCAT_FUNC=78, MODIFY_DATE_FUNC=79, 
		CAST_FUNC=80, SUBSTRING_FUNC=81, ARRAY_PUSH_FUNC=82, LEN_FUNC=83, IDENTIFICADOR=84, 
		NUMERO_DECIMAL=85, NUMERO=86, CHAR_LITERAL=87, VARCHAR_LITERAL=88, FECHA=89, 
		WS=90, LINE_COMMENT=91, BLOCK_COMMENT=92;
	public static final int
		RULE_programa = 0, RULE_valor = 1, RULE_valores = 2, RULE_booleano = 3, 
		RULE_func_builtin = 4, RULE_expresion = 5, RULE_expresion_booleana = 6, 
		RULE_comparador = 7, RULE_expresion_aritmetica = 8, RULE_declaracion = 9, 
		RULE_declaraciones = 10, RULE_declaracion_normal = 11, RULE_declaracion_array = 12, 
		RULE_tipo = 13, RULE_tipo_base = 14, RULE_tipo_array = 15, RULE_bloque = 16, 
		RULE_sentencia_en_bloque_ciclo = 17, RULE_sentencias_transaccionales = 18, 
		RULE_sentencia_en_bloque_procedimiento = 19, RULE_sentencia_en_bloque_funcion = 20, 
		RULE_sentencia_en_bloque = 21, RULE_if_simple = 22, RULE_if_else = 23, 
		RULE_case_when = 24, RULE_ciclo_for = 25, RULE_ciclo_foreach_array = 26, 
		RULE_ciclo_foreach_select = 27, RULE_exit_stmt = 28, RULE_continue_stmt = 29, 
		RULE_raise_notice = 30, RULE_raise_warning = 31, RULE_raise_exception = 32, 
		RULE_raise_simple = 33, RULE_funcion = 34, RULE_procedimiento = 35, RULE_parametros = 36, 
		RULE_parametro = 37, RULE_asignaciones_igual = 38, RULE_insert_stmt = 39, 
		RULE_update_stmt = 40, RULE_delete_stmt = 41, RULE_select_stmt = 42, RULE_columnas = 43, 
		RULE_columna_prefijo = 44, RULE_join_list = 45, RULE_join_clause = 46, 
		RULE_asignaciones = 47, RULE_where_clause = 48, RULE_condicion = 49;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "valor", "valores", "booleano", "func_builtin", "expresion", 
			"expresion_booleana", "comparador", "expresion_aritmetica", "declaracion", 
			"declaraciones", "declaracion_normal", "declaracion_array", "tipo", "tipo_base", 
			"tipo_array", "bloque", "sentencia_en_bloque_ciclo", "sentencias_transaccionales", 
			"sentencia_en_bloque_procedimiento", "sentencia_en_bloque_funcion", "sentencia_en_bloque", 
			"if_simple", "if_else", "case_when", "ciclo_for", "ciclo_foreach_array", 
			"ciclo_foreach_select", "exit_stmt", "continue_stmt", "raise_notice", 
			"raise_warning", "raise_exception", "raise_simple", "funcion", "procedimiento", 
			"parametros", "parametro", "asignaciones_igual", "insert_stmt", "update_stmt", 
			"delete_stmt", "select_stmt", "columnas", "columna_prefijo", "join_list", 
			"join_clause", "asignaciones", "where_clause", "condicion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "':='", "','", "'.'", "'+'", "'-'", "'*'", "'/'", "'^'", 
			"'>'", "'<'", "'>='", "'<='", "'='", "'<>'", "'..'", "'['", "']'", "'('", 
			"')'", "'$$'", "'ARRAY'", "'DECLARE'", "'INTEGER'", "'DECIMAL'", "'CHAR'", 
			"'BOOLEAN'", "'DATE'", "'VARCHAR'", "'TRUE'", "'FALSE'", "'BEGIN'", "'END'", 
			"'IF'", "'THEN'", "'ELSE'", "'END IF'", "'CASE'", "'WHEN'", "'END CASE'", 
			"'FOR'", "'IN'", "'LOOP'", "'END LOOP'", "'EXIT'", "'CONTINUE'", "'RAISE'", 
			"'RAISE NOTICE'", "'RAISE WARNING'", "'RAISE EXCEPTION'", "'COMMIT'", 
			"'ROLLBACK'", "'CREATE FUNCTION'", "'CREATE PROCEDURE'", "'RETURNS'", 
			"'AS'", "'LANGUAGE'", "'plpgsql'", "'FOREACH'", "'RETURN'", "'OR'", "'AND'", 
			"'NOT'", "'INSERT'", "'INTO'", "'VALUES'", "'UPDATE'", "'SET'", "'WHERE'", 
			"'DELETE'", "'FROM'", "'SELECT'", "'JOIN'", "'LEFT'", "'ON'", "'NOW()'", 
			"'RANDOM()'", "'CONCAT'", "'MODIFY_DATE'", "'CAST'", "'SUBSTRING'", "'ARRAY_PUSH'", 
			"'LEN'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PUNTOCOMA", "ASIGNACION", "COMA", "DOT", "MAS", "MENOS", "POR", 
			"DIVIDIDO", "ELEVADO", "MAYOR", "MENOR", "MAYOR_IGUAL", "MENOR_IGUAL", 
			"IGUAL", "DIFERENTE", "RANGE_DOTS", "COR_OPN", "COR_CLS", "LPAR", "RPAR", 
			"DOLLAR_DOLLAR", "ARRAY", "DECLARE", "INTEGER", "DECIMAL", "CHAR", "BOOLEAN", 
			"DATE", "VARCHAR", "TRUE", "FALSE", "BEGIN", "END", "IF", "THEN", "ELSE", 
			"END_IF", "CASE", "WHEN", "END_CASE", "FOR", "IN", "LOOP", "END_LOOP", 
			"EXIT", "CONTINUE", "RAISE", "RAISE_NOTICE", "RAISE_WARNING", "RAISE_EXCEPTION", 
			"COMMIT", "ROLLBACK", "CREATE_FUNCTION", "CREATE_PROCEDURE", "RETURNS", 
			"AS", "LANGUAGE", "PLPGSQL", "FOREACH", "RETURN", "OR_KW", "AND_KW", 
			"NOT_KW", "INSERT", "INTO", "VALUES", "UPDATE", "SET", "WHERE", "DELETE", 
			"FROM", "SELECT", "JOIN", "LEFT", "ON", "NOW_FUNC", "RANDOM_FUNC", "CONCAT_FUNC", 
			"MODIFY_DATE_FUNC", "CAST_FUNC", "SUBSTRING_FUNC", "ARRAY_PUSH_FUNC", 
			"LEN_FUNC", "IDENTIFICADOR", "NUMERO_DECIMAL", "NUMERO", "CHAR_LITERAL", 
			"VARCHAR_LITERAL", "FECHA", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pgsql.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pgsqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(pgsqlParser.EOF, 0); }
		public List<BloqueContext> bloque() {
			return getRuleContexts(BloqueContext.class);
		}
		public BloqueContext bloque(int i) {
			return getRuleContext(BloqueContext.class,i);
		}
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public List<ProcedimientoContext> procedimiento() {
			return getRuleContexts(ProcedimientoContext.class);
		}
		public ProcedimientoContext procedimiento(int i) {
			return getRuleContext(ProcedimientoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 27021602067578880L) != 0)) {
				{
				setState(103);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DECLARE:
				case BEGIN:
					{
					setState(100);
					bloque();
					}
					break;
				case CREATE_FUNCTION:
					{
					setState(101);
					funcion();
					}
					break;
				case CREATE_PROCEDURE:
					{
					setState(102);
					procedimiento();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValorContext extends ParserRuleContext {
		public TerminalNode VARCHAR_LITERAL() { return getToken(pgsqlParser.VARCHAR_LITERAL, 0); }
		public TerminalNode CHAR_LITERAL() { return getToken(pgsqlParser.CHAR_LITERAL, 0); }
		public TerminalNode NUMERO() { return getToken(pgsqlParser.NUMERO, 0); }
		public TerminalNode NUMERO_DECIMAL() { return getToken(pgsqlParser.NUMERO_DECIMAL, 0); }
		public TerminalNode FECHA() { return getToken(pgsqlParser.FECHA, 0); }
		public List<TerminalNode> IDENTIFICADOR() { return getTokens(pgsqlParser.IDENTIFICADOR); }
		public TerminalNode IDENTIFICADOR(int i) {
			return getToken(pgsqlParser.IDENTIFICADOR, i);
		}
		public BooleanoContext booleano() {
			return getRuleContext(BooleanoContext.class,0);
		}
		public Func_builtinContext func_builtin() {
			return getRuleContext(Func_builtinContext.class,0);
		}
		public TerminalNode DOT() { return getToken(pgsqlParser.DOT, 0); }
		public ValorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor; }
	}

	public final ValorContext valor() throws RecognitionException {
		ValorContext _localctx = new ValorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_valor);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				match(VARCHAR_LITERAL);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(CHAR_LITERAL);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				match(NUMERO);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				match(NUMERO_DECIMAL);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(114);
				match(FECHA);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(115);
				match(IDENTIFICADOR);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(116);
				booleano();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(117);
				func_builtin();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(118);
				match(IDENTIFICADOR);
				setState(119);
				match(DOT);
				setState(120);
				match(IDENTIFICADOR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValoresContext extends ParserRuleContext {
		public List<ValorContext> valor() {
			return getRuleContexts(ValorContext.class);
		}
		public ValorContext valor(int i) {
			return getRuleContext(ValorContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(pgsqlParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(pgsqlParser.COMA, i);
		}
		public ValoresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valores; }
	}

	public final ValoresContext valores() throws RecognitionException {
		ValoresContext _localctx = new ValoresContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_valores);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			valor();
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(124);
				match(COMA);
				setState(125);
				valor();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooleanoContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(pgsqlParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(pgsqlParser.FALSE, 0); }
		public BooleanoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleano; }
	}

	public final BooleanoContext booleano() throws RecognitionException {
		BooleanoContext _localctx = new BooleanoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_booleano);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_builtinContext extends ParserRuleContext {
		public TerminalNode NOW_FUNC() { return getToken(pgsqlParser.NOW_FUNC, 0); }
		public TerminalNode RANDOM_FUNC() { return getToken(pgsqlParser.RANDOM_FUNC, 0); }
		public TerminalNode CONCAT_FUNC() { return getToken(pgsqlParser.CONCAT_FUNC, 0); }
		public TerminalNode LPAR() { return getToken(pgsqlParser.LPAR, 0); }
		public ValoresContext valores() {
			return getRuleContext(ValoresContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(pgsqlParser.RPAR, 0); }
		public TerminalNode MODIFY_DATE_FUNC() { return getToken(pgsqlParser.MODIFY_DATE_FUNC, 0); }
		public TerminalNode CAST_FUNC() { return getToken(pgsqlParser.CAST_FUNC, 0); }
		public TerminalNode SUBSTRING_FUNC() { return getToken(pgsqlParser.SUBSTRING_FUNC, 0); }
		public TerminalNode ARRAY_PUSH_FUNC() { return getToken(pgsqlParser.ARRAY_PUSH_FUNC, 0); }
		public TerminalNode LEN_FUNC() { return getToken(pgsqlParser.LEN_FUNC, 0); }
		public Func_builtinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_builtin; }
	}

	public final Func_builtinContext func_builtin() throws RecognitionException {
		Func_builtinContext _localctx = new Func_builtinContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_func_builtin);
		try {
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOW_FUNC:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				match(NOW_FUNC);
				}
				break;
			case RANDOM_FUNC:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(RANDOM_FUNC);
				}
				break;
			case CONCAT_FUNC:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				match(CONCAT_FUNC);
				setState(136);
				match(LPAR);
				setState(137);
				valores();
				setState(138);
				match(RPAR);
				}
				break;
			case MODIFY_DATE_FUNC:
				enterOuterAlt(_localctx, 4);
				{
				setState(140);
				match(MODIFY_DATE_FUNC);
				}
				break;
			case CAST_FUNC:
				enterOuterAlt(_localctx, 5);
				{
				setState(141);
				match(CAST_FUNC);
				}
				break;
			case SUBSTRING_FUNC:
				enterOuterAlt(_localctx, 6);
				{
				setState(142);
				match(SUBSTRING_FUNC);
				}
				break;
			case ARRAY_PUSH_FUNC:
				enterOuterAlt(_localctx, 7);
				{
				setState(143);
				match(ARRAY_PUSH_FUNC);
				}
				break;
			case LEN_FUNC:
				enterOuterAlt(_localctx, 8);
				{
				setState(144);
				match(LEN_FUNC);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
